// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItem Renders NavItems with closed SideNav correctly 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <li
      aria-expanded="false"
      class="navItem group ml-2 px-2 w-10"
      id="headlessui-popover-button-17"
    >
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white dark:text-white transform duration-100 ease-out text-gray-900"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
        <polyline
          points="9 22 9 12 15 12 15 22"
        />
      </svg>
      <p
        class="text-md font-medium flex-grow ml-3 opacity-0 hidden group-hover:text-primary-600 dark:group-hover:text-white text-gray-800 dark:text-white"
      >
        Home
      </p>
    </li>
  </div>
  <div
    class="relative"
  >
    <li
      aria-expanded="false"
      class="navItem group ml-2 px-2 w-10"
      id="headlessui-popover-button-19"
    >
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white dark:text-white transform duration-100 ease-out text-gray-900"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="18"
          x2="18"
          y1="20"
          y2="10"
        />
        <line
          x1="12"
          x2="12"
          y1="20"
          y2="4"
        />
        <line
          x1="6"
          x2="6"
          y1="20"
          y2="14"
        />
      </svg>
      <p
        class="text-md font-medium flex-grow ml-3 opacity-0 hidden group-hover:text-primary-600 dark:group-hover:text-white text-gray-800 dark:text-white"
      >
        Dashboard
      </p>
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white transform duration-100 ease-out opacity-0 hidden text-gray-400"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </li>
  </div>
  <div
    class="relative"
  >
    <li
      aria-expanded="false"
      class="navItem group ml-2 px-2 w-10"
      id="headlessui-popover-button-21"
    >
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white dark:text-white transform duration-100 ease-out text-gray-900"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="12 2 2 7 12 12 22 7 12 2"
        />
        <polyline
          points="2 17 12 22 22 17"
        />
        <polyline
          points="2 12 12 17 22 12"
        />
      </svg>
      <p
        class="text-md font-medium flex-grow ml-3 opacity-0 hidden group-hover:text-primary-600 dark:group-hover:text-white text-gray-800 dark:text-white"
      >
        Projects
      </p>
    </li>
  </div>
  <div
    class="relative"
  >
    <li
      aria-expanded="false"
      class="navItem group ml-2 px-2 w-10"
      id="headlessui-popover-button-23"
    >
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white dark:text-white transform duration-100 ease-out text-gray-900"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 11 12 14 22 4"
        />
        <path
          d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"
        />
      </svg>
      <p
        class="text-md font-medium flex-grow ml-3 opacity-0 hidden group-hover:text-primary-600 dark:group-hover:text-white text-gray-800 dark:text-white"
      >
        Tasks
      </p>
    </li>
  </div>
  <div
    class="relative"
  >
    <li
      aria-expanded="false"
      class="navItem group ml-2 px-2 w-10"
      id="headlessui-popover-button-25"
    >
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white dark:text-white transform duration-100 ease-out text-gray-900"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
        />
        <line
          x1="4"
          x2="4"
          y1="22"
          y2="15"
        />
      </svg>
      <p
        class="text-md font-medium flex-grow ml-3 opacity-0 hidden group-hover:text-primary-600 dark:group-hover:text-white text-gray-800 dark:text-white"
      >
        Reporting
      </p>
    </li>
  </div>
  <div
    class="relative"
  >
    <li
      aria-expanded="false"
      class="navItem group ml-2 px-2 w-10"
      id="headlessui-popover-button-27"
    >
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white dark:text-white transform duration-100 ease-out text-gray-900"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"
        />
        <circle
          cx="12"
          cy="10"
          r="3"
        />
      </svg>
      <p
        class="text-md font-medium flex-grow ml-3 opacity-0 hidden group-hover:text-primary-600 dark:group-hover:text-white text-gray-800 dark:text-white"
      >
        Rentals
      </p>
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white transform duration-100 ease-out opacity-0 hidden text-gray-400"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </li>
  </div>
  <div
    class="relative"
  >
    <li
      aria-expanded="false"
      class="navItem group ml-2 px-2 w-10"
      id="headlessui-popover-button-29"
    >
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white dark:text-white transform duration-100 ease-out text-gray-900"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="3"
        />
        <path
          d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"
        />
      </svg>
      <p
        class="text-md font-medium flex-grow ml-3 opacity-0 hidden group-hover:text-primary-600 dark:group-hover:text-white text-gray-800 dark:text-white"
      >
        Settings
      </p>
    </li>
  </div>
  <div
    class="relative"
  >
    <li
      aria-expanded="false"
      class="navItem group ml-2 px-2 w-10"
      id="headlessui-popover-button-31"
    >
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white dark:text-white transform duration-100 ease-out -rotate-180 text-gray-900"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="19"
          x2="5"
          y1="12"
          y2="12"
        />
        <polyline
          points="12 19 5 12 12 5"
        />
      </svg>
      <p
        class="text-md font-medium flex-grow ml-3 opacity-0 hidden group-hover:text-primary-600 dark:group-hover:text-white text-gray-800 dark:text-white"
      >
        Close Navbar
      </p>
    </li>
  </div>
</DocumentFragment>
`;

exports[`NavItem Renders NavItems with open SideNav correctly 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <li
      aria-expanded="false"
      class="navItem group px-4"
      id="headlessui-popover-button-1"
    >
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white dark:text-white transform duration-100 ease-out text-gray-900"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
        <polyline
          points="9 22 9 12 15 12 15 22"
        />
      </svg>
      <p
        class="text-md font-medium flex-grow ml-3 group-hover:text-primary-600 dark:group-hover:text-white text-gray-800 dark:text-white"
      >
        Home
      </p>
    </li>
  </div>
  <div
    class="relative"
  >
    <li
      aria-expanded="false"
      class="navItem group px-4"
      id="headlessui-popover-button-3"
    >
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white dark:text-white transform duration-100 ease-out text-gray-900"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="18"
          x2="18"
          y1="20"
          y2="10"
        />
        <line
          x1="12"
          x2="12"
          y1="20"
          y2="4"
        />
        <line
          x1="6"
          x2="6"
          y1="20"
          y2="14"
        />
      </svg>
      <p
        class="text-md font-medium flex-grow ml-3 group-hover:text-primary-600 dark:group-hover:text-white text-gray-800 dark:text-white"
      >
        Dashboard
      </p>
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white transform duration-100 ease-out text-gray-400"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </li>
  </div>
  <div
    class="relative"
  >
    <li
      aria-expanded="false"
      class="navItem group px-4"
      id="headlessui-popover-button-5"
    >
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white dark:text-white transform duration-100 ease-out text-gray-900"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="12 2 2 7 12 12 22 7 12 2"
        />
        <polyline
          points="2 17 12 22 22 17"
        />
        <polyline
          points="2 12 12 17 22 12"
        />
      </svg>
      <p
        class="text-md font-medium flex-grow ml-3 group-hover:text-primary-600 dark:group-hover:text-white text-gray-800 dark:text-white"
      >
        Projects
      </p>
    </li>
  </div>
  <div
    class="relative"
  >
    <li
      aria-expanded="false"
      class="navItem group px-4"
      id="headlessui-popover-button-7"
    >
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white dark:text-white transform duration-100 ease-out text-gray-900"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 11 12 14 22 4"
        />
        <path
          d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"
        />
      </svg>
      <p
        class="text-md font-medium flex-grow ml-3 group-hover:text-primary-600 dark:group-hover:text-white text-gray-800 dark:text-white"
      >
        Tasks
      </p>
    </li>
  </div>
  <div
    class="relative"
  >
    <li
      aria-expanded="false"
      class="navItem group px-4"
      id="headlessui-popover-button-9"
    >
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white dark:text-white transform duration-100 ease-out text-gray-900"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
        />
        <line
          x1="4"
          x2="4"
          y1="22"
          y2="15"
        />
      </svg>
      <p
        class="text-md font-medium flex-grow ml-3 group-hover:text-primary-600 dark:group-hover:text-white text-gray-800 dark:text-white"
      >
        Reporting
      </p>
    </li>
  </div>
  <div
    class="relative"
  >
    <li
      aria-expanded="false"
      class="navItem group px-4"
      id="headlessui-popover-button-11"
    >
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white dark:text-white transform duration-100 ease-out text-gray-900"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"
        />
        <circle
          cx="12"
          cy="10"
          r="3"
        />
      </svg>
      <p
        class="text-md font-medium flex-grow ml-3 group-hover:text-primary-600 dark:group-hover:text-white text-gray-800 dark:text-white"
      >
        Rentals
      </p>
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white transform duration-100 ease-out text-gray-400"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </li>
  </div>
  <div
    class="relative"
  >
    <li
      aria-expanded="false"
      class="navItem group px-4"
      id="headlessui-popover-button-13"
    >
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white dark:text-white transform duration-100 ease-out text-gray-900"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="3"
        />
        <path
          d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"
        />
      </svg>
      <p
        class="text-md font-medium flex-grow ml-3 group-hover:text-primary-600 dark:group-hover:text-white text-gray-800 dark:text-white"
      >
        Settings
      </p>
    </li>
  </div>
  <div
    class="relative"
  >
    <li
      aria-expanded="false"
      class="navItem group px-4"
      id="headlessui-popover-button-15"
    >
      <svg
        class="group-hover:text-primary-600 dark:group-hover:text-white dark:text-white transform duration-100 ease-out text-gray-900"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="19"
          x2="5"
          y1="12"
          y2="12"
        />
        <polyline
          points="12 19 5 12 12 5"
        />
      </svg>
      <p
        class="text-md font-medium flex-grow ml-3 group-hover:text-primary-600 dark:group-hover:text-white text-gray-800 dark:text-white"
      >
        Close Navbar
      </p>
    </li>
  </div>
</DocumentFragment>
`;
